--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mendix/pluggable-widgets-tools": "^8.12.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "scandit-sdk-react": "^4.0.2"
   }
 }
